# xinv

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  defaultheader.txt  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/: .gitignore  Makefile
docs/source/: api.rst  changelog.rst  conf.py  dev.rst  index.rst  installation.rst  introduction.rst  tutorial.rst
docs/source/logo_etc/: logo_base.xcf  make_logobase.ipynb  makefavicon
docs/source/notebooks/: getting_started.ipynb
src/extension/: sinex.pyx  xiext.pyx
src/xinv/: xinv_accessors.py
src/xinv/core/: attrs.py  exceptions.py  grouping.py  logging.py  neq.py  tools.py
src/xinv/cov/: cov-generic.py  cov.py  covariancebase.py
src/xinv/fwd/: __init__.py  annual.py  constant.py  fwdopbase.py  fwdstack.py  harmonic.py  harmonics.py  linear.py  matrixfwd.py  polynomial.py  quadratic.py  seaspoly.py  semiannual.py
src/xinv/io/: gzipwrap.py  sinex.py  xinviobackends.py
src/xinv/linalg/: inplace.py
src/xinv/neq/: __init__.py  add.py  build.py  fix.py  neq.py  reduce.py  regularize.py  set_apriori.py  set_x0.py  solve.py  transform.py
testing/: testbuildsimple.py
tests/: fixtures.py  test_addneq.py  test_annualneq.py  test_apriofix.py  test_fwdstacking.py  test_harmonicsneq.py  test_neq_ops.py  test_polyneq.py  test_polyneq_cov.py  test_reduce.py  test_regularize.py  test_transform.py  test_xinvformats.py
tests/testdata/: neqpoly.nc  neqpoly_illposed.nc  neqpoly_simple.nc
xinv/: __init__.py  xinv_accessors.py
xinv/fwd/: polynomial.py
